Se agregaron los exteriores de maia y los mejores momentos de Paulina y Lucia

--- a/WebMali/Web/Views/Home/Index.cshtml
+++ b/WebMali/Web/Views/Home/Index.cshtml
@@ -399,7 +399,7 @@
             <div class="row align-items-center mb-5">
 
                 <!-- TEXTO -->
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <p>
                         Somos un equipo creativo dedicado a la fotografía y producción audiovisual de eventos.
                         Nos especializamos en quince años, bodas y eventos empresariales, capturando cada momento
@@ -413,12 +413,12 @@
                     </p>
                 </div>
 
-                <!-- IMAGEN -->
+           @*      <!-- IMAGEN -->
                 <div class="col-md-6 text-center">
                     <img src="~/Images/foto1.JPG"
                          class="img-fluid rounded-4 shadow"
                          alt="Equipo Mali Fiestas y Eventos">
-                </div>
+                </div> *@
 
             </div>
 
