--- a/WebMali/Web/Views/Quince/Trailer.cshtml
+++ b/WebMali/Web/Views/Quince/Trailer.cshtml
@@ -105,8 +105,29 @@
         <h1 class="display-5 fw-bold mb-5 text-uppercase">
             Trailers de Fiesta
         </h1>
+            <!-- 🎬 TRAILER LUCIA -->
+            <div class="trailer-box">
+                <div class="trailer-title">Lucia · 15 Años</div>
+                <div class="video-wrapper">
+                    <video controls preload="metadata">
+                        <source src="~/Videos/QuinceTrailer/MMLucia.mp4" type="video/mp4" />
+                        Tu navegador no soporta video HTML5.
+                    </video>
+                </div>
+            </div>
 
-        <!-- 🎬 TRAILER PÍA -->
+            <!-- 🎬 TRAILER PAULINA -->
+            <div class="trailer-box">
+                <div class="trailer-title">Paulina · 15 Años</div>
+                <div class="video-wrapper">
+                    <video controls preload="metadata">
+                        <source src="~/Videos/QuinceTrailer/MMPaulina.mp4" type="video/mp4" />
+                        Tu navegador no soporta video HTML5.
+                    </video>
+                </div>
+            </div>
+
+            <!-- 🎬 TRAILER PÍA -->
         <div class="trailer-box">
             <div class="trailer-title">Pía · 15 Años</div>
             <div class="video-wrapper">
